Fixed table scroll on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,9 +23,9 @@
     align-self: normal;
     align-content: unset;
     padding: 0 0 15px 0;
-    max-width: var(--form-cells-min-width);
+    max-width: 100vw;
     width: 100vw;
-    min-width: 510px;
+    /* min-width: 510px; */
     overflow: auto;
   }
   input[type=button] {
